<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/dp_main_padding_left_right"
    android:paddingTop="@dimen/dp_main_padding_top_bottom"
    android:paddingBottom="@dimen/dp_main_padding_top_bottom"
    android:background="@drawable/wallpaper"
    tools:context=".MainBluetoothActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:id="@+id/id_root_view"
        >
    <RadioGroup
        android:id="@+id/id_main_menu_rg"
        android:layout_width="@dimen/dp_menu_width"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/id_main_menu_rb1"
            style="@style/Style_Main_Title"
            android:text="@string/txt_main_title_contacts"
            android:background="@drawable/selector_menu_contacts"
            />
        <RadioButton
            android:id="@+id/id_main_menu_rb2"
            style="@style/Style_Main_Title"
            android:text="@string/txt_main_title_call"
            android:background="@drawable/selector_menu_call_record"
            />
        <RadioButton
            android:id="@+id/id_main_menu_rb3"
            style="@style/Style_Main_Title"
            android:text="@string/txt_main_title_dial"
            android:background="@drawable/selector_menu_dial"
            />
        <RadioButton
            android:id="@+id/id_main_menu_rb4"
            style="@style/Style_Main_Title"
            android:checked="true"
            android:text="@string/txt_main_title_settings"
            android:background="@drawable/selector_menu_settings"
            />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/id_container"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    </LinearLayout>
</LinearLayout>